src/testing/private_tests/negative_tests/bad_scopes.eds
void main() {
    int a, b, c, x, y;
    int func(int i, int j) {
        int k, l;
        
        int func2(int a, int j) {
            int c;
            c = a * i + j * b;
            return c-1;
        }
        
        k = a + i;
        l = j - b;
        return k+l-func2(c,a);
    }
    
    int otherfunc(int h) {
        int d;
        d = h+k; //k not accessible in this scope
        return ++d;
    }
    
    a = 1; b = 2; c = 3;
    x = 5; y = 10;
    x = func(x, y);
    y = otherfunc(x);
}
